[package]
name = "tokio-tide"
version = "0.1.0"
authors = ["ttang <atory_cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
bytes = "1.0.1"
futures = "0.3.12"
http = "0.2.3"
httparse = "1.3.4"
serde = { version = "1.0.119", features = ["derive"] }
serde_derive = "1.0.119"
serde_json = "1.0.61"
time = "0.1"
tokio = { version = "1.0.2", features = ["full"] }
tokio-stream = "0.1.2"
tokio-util = { version = "0.6.1", features = ["full"] }
